adding order details page

--- a/server/plugins/email/templates/admin-purchase-alert.pug
+++ b/server/plugins/email/templates/admin-purchase-alert.pug
@@ -16,7 +16,7 @@ mixin greeting
         tr: td(style="padding:20px 0 20px 0") 
             | Order ID: 
             |
-            +link(`/orders/${transactionId}`, transactionId)
+            +link(`/order-details/${transactionId}`, transactionId)
 
 
 mixin details
