--- a/server/plugins/email/templates/purchase-receipt.pug
+++ b/server/plugins/email/templates/purchase-receipt.pug
@@ -57,7 +57,7 @@ mixin greeting
     tr: td 
       | You ordered
       |
-      +link(`/orders/${transactionId}`, orderTitle)
+      +link(`/order-details/${transactionId}`, orderTitle)
       |. 
 
 
@@ -71,7 +71,7 @@ mixin details
             td(style="padding-bottom:5px")
               | Order
               |
-              +link(`/orders/${transactionId}`, transactionId)
+              +link(`/order-details/${transactionId}`, transactionId)
 
         include includes/pink-table.pug
           table
