--- a/src/assets/css/base.scss
+++ b/src/assets/css/base.scss
@@ -5,6 +5,7 @@
 @import "components/variables";
 @import "components/objects";
 @import "components/mixins";
+@import "components/cartItem";
 
 @import '~animate.css';
 .animated {
