--- a/src/assets/css/components/_objects.scss
+++ b/src/assets/css/components/_objects.scss
@@ -59,6 +59,7 @@
 .mtl { margin-top:20px !important }
 .mrs { margin-right:5px !important }
 .mrl { margin-right:20px !important }
+.mrxl { margin-right:40px !important }
 .mlm { margin-left:10px !important }
 
 .nowrap { white-space: nowrap !important }
