--- a/src/assets/css/components/_objects.scss
+++ b/src/assets/css/components/_objects.scss
@@ -61,6 +61,7 @@
 .mrl { margin-right:20px !important }
 .mrxl { margin-right:40px !important }
 .mlm { margin-left:10px !important }
+.mvl { margin-top:20px !important; margin-bottom:20px !important }
 
 .nowrap { white-space: nowrap !important }
 .wordwrap { white-space: wordwrap !important }
