--- a/src/assets/css/components/_element-ui-overrides.scss
+++ b/src/assets/css/components/_element-ui-overrides.scss
@@ -3,11 +3,11 @@
 }
 .VueCarousel-navigation-prev {
     left: 40px !important;
-    padding: 5px 5px 5px 2px !important;
+    padding: 3px 5px 5px 2px !important;
 }
 .VueCarousel-navigation-next {
     right: 40px !important;
-    padding: 5px 5px 5px 9px !important;
+    padding: 3px 5px 5px 9px !important;
 }
 .VueCarousel-navigation-button {
     border: none;
@@ -16,25 +16,22 @@
     height: 36px;
     width: 36px;
     cursor: pointer;
-    // -webkit-transition: .3s;
+    -webkit-transition: .3s;
     transition: .3s;
     border-radius: 50%;
-    background-color: rgba(31,45,61,.30);
+    background-color: rgba(31,45,61,.7);
     position: absolute;
     top: 50%;
     z-index: 10;
-    // -webkit-transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
     transform: translateY(-50%);
     text-align: center;
     font-size: 20px;
-    // color: $colorPink !important;
     color: #fff !important;
 }
 .VueCarousel-navigation-button:hover {
     background-color: rgba(31,45,61,.8);
 }
-.VueCarousel-navigation--disabled,
-.VueCarousel-navigation--disabled:hover {
-    background-color: rgba(31,45,61,.30);
-    color: $colorGray !important;
+.VueCarousel-navigation--disabled {
+    visibility: hidden;
 }
