adding a Conditions of Use page

--- a/src/assets/css/components/_objects.scss
+++ b/src/assets/css/components/_objects.scss
@@ -71,6 +71,7 @@
 .tal{ text-align: left !important }
 .tar{ text-align: right !important }
 
+.underline { text-decoration: underline !important }
 .underlineDotted { border-bottom: 1px dotted !important }
 
 .vab { vertical-align: baseline !important }
