fixing broken URL to the Privacy Notice page in the purchase receipt email template

--- a/server/plugins/email/templates/purchase-receipt.pug
+++ b/server/plugins/email/templates/purchase-receipt.pug
@@ -89,7 +89,7 @@ mixin signature
 mixin disclaimer
   p(style="margin:10px 0 8px 0") 
     | By placing your order, you agree to gmnst.com’s 
-    +link('/privacy-notice', 'Privacy Notice')
+    +link('/privacy', 'Privacy Notice')
     |
     | and 
     +link('/conditions-of-use', 'Conditions of Use')
