--- a/server/views/socialshare.html
+++ b/server/views/socialshare.html
@@ -4,9 +4,16 @@
         <meta property="og:title" content="{{title}}" />
         <meta property="og:description" content="{{description}}" />
         <meta property="og:image" content="{{image}}" />
+
+        <meta name="twitter:card" content="summary" />
+        <meta name="twitter:title" content="{{title}}" />
+        <meta name="twitter:description" content="{{description}}" />
+        <meta name="twitter:image" content="{{image}}" />
     </head>
-    <body>
-        <p>{{description}}</p>
-        <img src="{{image}}">
+
+    <body itemscope itemtype="http://schema.org/Product">
+        <h1 itemprop="name">{{title}}</h1>
+        <img itemprop="image" src="{{image}}" />
+        <p itemprop="description">{{description}}</p>
     </body>
 </html>
