--- a/server/views/socialshare.html
+++ b/server/views/socialshare.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta property="og:title" content="{{title}}" />
-        <meta property="og:description" content="{{description}}" />
-        <meta property="og:image" content="{{image}}" />
-
+        <meta name="og:title" content="{{title}}" />
+        <meta name="og:description" content="{{description}}" />
+        <meta name="og:image" content="{{image}}" />
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:title" content="{{title}}" />
         <meta name="twitter:description" content="{{description}}" />
