meta tag updates to socialshare template

--- a/server/views/socialshare.html
+++ b/server/views/socialshare.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta name="og:title" content="{{title}}" />
-        <meta name="og:description" content="{{description}}" />
-        <meta name="og:image" content="{{image}}" />
-        <meta name="twitter:card" content="summary" />
+    <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb#">
+        <!-- <meta property="fb:app_id" content="302184056577324" />  -->
+        <meta property="og:type"   content="article" /> 
+        <meta property="og:url"    content="https://www.gmnst.com" /> 
+        <meta property="og:title"  content="{{title}}" /> 
+        <meta property="og:description"  content="{{description}}" /> 
+        <meta property="og:image"  content="{{image}}" /> 
+        <meta property="og:site_name" content="Gmnst.com" />
+        <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:title" content="{{title}}" />
         <meta name="twitter:description" content="{{description}}" />
         <meta name="twitter:image" content="{{image}}" />
+        <meta name="twitter:site" content="@gmnstLife" />
+        <meta name="twitter:creator" content="@gmnstLife" />
     </head>
 
     <body itemscope itemtype="http://schema.org/Product">
