--- a/server/views/socialshare.html
+++ b/server/views/socialshare.html
@@ -2,11 +2,11 @@
 <html>
     <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb#">
         <!-- <meta property="fb:app_id" content="302184056577324" />  -->
-        <meta property="og:type"   content="article" /> 
-        <meta property="og:url"    content="https://www.gmnst.com" /> 
-        <meta property="og:title"  content="{{title}}" /> 
-        <meta property="og:description"  content="{{description}}" /> 
-        <meta property="og:image"  content="{{image}}" /> 
+        <meta property="og:type" content="article" /> 
+        <meta property="og:url" content="{{url}}" /> 
+        <meta property="og:title" content="{{title}}" /> 
+        <meta property="og:description" content="{{description}}" /> 
+        <meta property="og:image" content="{{image}}" /> 
         <meta property="og:site_name" content="Gmnst.com" />
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:title" content="{{title}}" />
