meta tag updates to socialshare template

--- a/server/views/socialshare.html
+++ b/server/views/socialshare.html
@@ -3,7 +3,8 @@
     <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb#">
         <!-- <meta property="fb:app_id" content="302184056577324" />  -->
         <meta property="og:type" content="article" /> 
-        <meta property="og:url" content="{{url}}" /> 
+        <meta property="og:url" content="https://gmnst.com/type/tops/seo_uri_25" /> 
+        <meta property="og:testurl" content="{{url}}" /> 
         <meta property="og:title" content="{{title}}" /> 
         <meta property="og:description" content="{{description}}" /> 
         <meta property="og:image" content="{{image}}" /> 
