adding strikethrough to product price if it's on sale

--- a/src/assets/css/components/_objects.scss
+++ b/src/assets/css/components/_objects.scss
@@ -67,6 +67,8 @@
 .nowrap { white-space: nowrap !important }
 .wordwrap { white-space: wordwrap !important }
 
+.strikethrough { text-decoration: line-through }
+
 .tac{ text-align: center !important }
 .tal{ text-align: left !important }
 .tar{ text-align: right !important }
